src/test/BadAnnotations5/BadAnnotations5.expected
error: BadAnnotations5.panda:3:5: '@limited' may not be used on methods which do not take any mutable parameters; did you mean to use '@self' instead?
error: BadAnnotations5.panda:8:5: '@limited' may not be used on methods which do not take any mutable parameters; did you mean to use '@self' instead?
2 errors
