src/test/BadAnnotations5/BadAnnotations5.panda
class BadAnnotations5 {
    @limited
    method broken1() {
    }

    @limited
    @class
    method broken2(s:String, i:Int) {
    }
}